--- a/index.html
+++ b/index.html
@@ -84,17 +84,25 @@
       <div class="todos">
         <form action="" class="todos__task">
           <input type="text" name="" id="" placeholder="지금 당장 시작할 일은 무엇인가요?" />
+          <button type="submit" class="todos__submit"><i class="fa-solid fa-plus"></i></button>
         </form>
         <ul class="todos__list">
           <li class="todos__list--item">
-            <input type="checkbox" id="sfx__button" name="sfx" value="1" checked>
-            <label for="sfx__button">오늘의 할일은 이것인데</label>
+            <input type="checkbox" id="todos_54781" name="" value="1" checked>
+            <label for="todos_54781">오늘의 할일은 이것인데<span></span></label>
           </li>
-          <li class="todos__list--item">이걸 다끝내고 자면 몇시야 도대체 근데 재밌음 ㅋ </li>
-          <li class="todos__list--item">오늘의 할일은 이것인데</li>
-          <li class="todos__list--item">이걸 다끝내고 자면 몇시야 도대체 근데 재밌음 ㅋ </li>
-          <li class="todos__list--item">빨리 만들어보고 싶으당당당.</li>
-          <li class="todos__list--item done">빨리 만들어보고 싶으당당당.</li>
+          <li class="todos__list--item">
+            <input type="checkbox" id="todos_54782" name="" value="1" checked>
+            <label for="todos_54782">빨리 만들어보고 싶으당당당<span></span></label>
+          </li>
+          <li class="todos__list--item">
+            <input type="checkbox" id="todos_54783" name="" value="1" checked>
+            <label for="todos_54783">이걸 다끝내고 자면 몇시야 도대체 근데<span></span></label>
+          </li>
+          <li class="todos__list--item" data-status="done">
+            <input type="checkbox" id="todos_54784" name="" value="1" checked>
+            <label for="todos_54784">이걸 다끝내고 자면 몇시야 도대체 근데 재밌음<span></span></label>
+          </li>
         </ul>
       </div>
     </main>
@@ -111,16 +119,38 @@
       <div class="triangle1"></div>
       <div class="triangle2"></div>
     </div>
-    <div class="modal">
+    <div class="modal active">
       <div class="modal__dimmed"></div>
-      <div class="modal__panel">
-        <h1></h1>
-        <p></p>
-        <div class="contact"></div>
-        <div class="copyrights">
-          <p class="">폰트 정보</p>
-          <p class="">copyright</p>
+      <div class="modal__container">
+        <button class="modal__button-left"><i class="fa-solid fa-chevron-left"></i></button>
+        <div class="modal__panel active">
+          <h1 class="title">
+            <i class="fa-solid fa-square-full"></i>
+            당신의 시간을 찾아 줄 <strong>뽀모도로 타이머</strong>
+          </h1>
+          <p class="description">
+            한 가지 일에 집중하기 힘들지 않나요? <br>
+            일이 쌓여갈수록 조급한 마음에 시간관리가 더욱 어려워지죠. <br>
+            집중이 필요한 시간에 다른 것들은 잠시 미뤄두고 한 가지에만 집중할 수 있는 <br>
+            뽀모도로 타이머로 오늘 수행할 일들은 차곡차곡 해결해 보세요. <br>
+            당장 뽀모를 켜세요, 소중한 시간이 돌아옵니다. <br>
+          </p>
         </div>
+        <div class="modal__panel">
+          <div class="greeting">
+            <span class="greeting__row">만나서 반갑습니다.</span>
+            <span class="greeting__row">매일 업그레이드 중인 개발자,</span>
+            <span class="greeting__row">김민아입니다.</span>
+          </div>
+        </div>
+        <div class="modal__panel">
+          <div class="contact"></div>
+          <div class="copyrights">
+            <p class="">폰트 정보</p>
+            <p class="">copyright</p>
+          </div>
+        </div>
+        <button class="modal__button-right"><i class="fa-solid fa-chevron-right"></i></button>
       </div>
     </div>
   </div>
